--- a/project/electrodynamics.html
+++ b/project/electrodynamics.html
@@ -58,17 +58,17 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER 1 </span>
                             <div class="timeline-content">
-                                <h3 class="title"> Chapter Detail as Title </h3>
+                                <h3 class="title"> Maxwell's Electromagnetic Equations </h3>
                                 <p class="description">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    This section we examining the basic phenomena and deducing the set of equations of Maxwell equations, which describe the behavior of electromagnetic fields. 
 
                                     <ul>
 
-                                    <li> This is first bullet point </li>
-                                    <li> This is second bullet point </li>
-                                    <li> This is third Bullet point</li>
+                                    <li> Maxwell's equations  </li>
+                                    <li> Poynting's Theorem and Conservation of Energy and Momentum </li>
+                                    <li> Green Functions for the wave equation </li>
 
                                 </ul>
                                 </p>
@@ -81,17 +81,17 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER 2 </span>
                             <div class="timeline-content">
-                                <h3 class="title text-left"> Chapter Detail as Title </h3>
+                                <h3 class="title text-left"> Boundary Value Problems  </h3>
                                 <p class="description text-left">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    This section we discuss boundary value problems. The problem of construction of Green functions in terms of orthonormal functions arises naturally in the attempt to solve the Poisson equation in the various geometries.  
 
                                     <ul>
 
-                                    <li class="text-left"> This is first bullet point </li>
-                                    <li class="text-left"> This is second bullet point </li>
-                                    <li class="text-left"> This is third Bullet point</li>
+                                    <li class="text-left"> Green Function for the sphere </li>
+                                    <li class="text-left"> Boundary Value Problems with Azimuthal Symmetry </li>
+                                    <li class="text-left"> Spherical Harmonics </li>
 
                                 </ul>
                                 </p>
@@ -104,17 +104,17 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER 3 </span>
                             <div class="timeline-content">
-                                <h3 class="title"> Chapter Detail as Title </h3>
+                                <h3 class="title"> Plane Electromagnetic Waves, Wave Propagation and Waveguides </h3>
                                 <p class="description">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    This section we discuss plane waves in unbounded, or perhaps semi-infinite, media treats first the basic properties of plane electromagnetic waves in nonconducting media.   
 
                                     <ul>
 
-                                    <li> This is first bullet point </li>
-                                    <li> This is second bullet point </li>
-                                    <li> This is third Bullet point</li>
+                                    <li> Plane waves in a nonconducting medium </li>
+                                    <li> Frequency dispersion characteristics of dielectrics,conductors and plasmas </li>
+                                    <li> Waveguides </li>
 
                                 </ul>
                                 </p>
@@ -126,17 +126,17 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER 4 </span>
                             <div class="timeline-content">
-                                <h3 class="title text-left"> Chapter detail as title </h3>
+                                <h3 class="title text-left"> Relativistic electrodynamics </h3>
                                 <p class="description text-left">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    This section we see the Lagrangian approach to the equations of motion is presented mainly to introduce the concept of a Lorentz invariant action from which covariant dynamical equations can be derived.  
 
                                     <ul>
 
-                                    <li class="text-left"> This is first bullet point </li>
-                                    <li class="text-left"> This is second bullet point </li>
-                                    <li class="text-left"> This is third Bullet point</li>
+                                    <li class="text-left"> Lagrangian and Hamiltonian of relativistic charged particle </li>
+                                    <li class="text-left"> Lagrangian for electromagnetic field </li>
+                                    <li class="text-left"> Wave equation in covariant form </li>
 
                                 </ul>
                                 </p>
@@ -145,7 +145,30 @@
                         </div>
 
 
-                        <!-- Add more blocks here -->
+                        <!-- new block starts from  here -->
+
+                        <div class="timeline">
+                            <span class="timeline-icon"></span>
+                            <span class="year"> CHAPTER 5 </span>
+                            <div class="timeline-content">
+                                <h3 class="title"> Radiation by moving Charge and Brehmsstranhlung </h3>
+                                <p class="description">
+                                    This section we discuss examples of radiation by macroscopic time-varying charge and current densities, which fundamentally charges in motion. The radiation emitted during atomic collisions is customarily call bremsstrahlung because it was first observed when high-energy electrons were stopped in a thick metallic target
+
+                                    <ul>
+
+                                    <li> Lienard - Wiechart potentials </li>
+                                    <li> Thomas scattering </li>
+                                    <li> Brehmsstrahlung in coulomb collision </li>
+
+                                </ul>
+                                </p>
+                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                            </div>
+                        </div>
+
+                        <!-- add more blocks here -->
+
 
 
                     </div>
