--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 									<h4> Electrodynamics </h4>
 								</a>
 								<p>
-									 This section is under construction. Some placeholder text are placed to be removed later. We will bring the update soon when our focused group start to work on the project. Please click the link to see detail.
+									 The branch of physics which deals with rapidly changing electric and magnetic fields due to different interaction is called electrodynamics. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to electrodynamics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 
     
 								</p>
@@ -279,8 +279,7 @@
 									<h4> Statistical and Thermal Physics </h4>
 								</a>
 								<p>
-									 This section is under construction. Some placeholder text are placed to be removed later. We will bring the update soon when our focused group start to work on the project. Please click the link to see detail. 
-
+									  The use of statistical methods to understand the behavior of complex, many-particle systems; in particular, this machinery was originally developed to understand quantitatively the ideas of temperature, heat flow, and irreversibility is called Statistical and Thermal Physics. Statistical physics is one of the most amazing intellectual developments of the last hundred and fifty years.  It has its roots in classical thermodynamics, the study of "heat flow". Without statistical physics, semiconductor-based high technology would not exist, we wouldn't understand why outer space glows at 2.7 Kelvin, and Einstein would not have had a PhD thesis topic. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to our topic by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
     
 								</p>
 							</div>
@@ -296,7 +295,7 @@
 									<h4> Quantum Mechanics</h4>
 								</a>
 								<p>
-									This section is under construction. Some placeholder text are placed to be removed later. We will bring the update soon when our focused group start to work on the project. Please click the link to see detail.
+									The branch of physics which deals with the physical properties of nature on an atomic scale is called quantum mechnics. Quantum mechanics differs from classical physics in that energy, momentum, angular momentum, and other quantities of a bound system are restricted to discrete values (quantization), objects have characteristics of both particles and waves (wave-particle duality), and there are limits to how accurately the value of a physical quantity can be predicted prior to its measurement, given a complete set of initial conditions (the uncertainty principle). In this section we will discuss how to interpret and visualize different physical phenomena and equations related to qunatum mechanics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>
