--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 									<h4> Classical Mechanics </h4>
 								</a>
 								<p>
-									This section is under construction. Some placeholder text are placed to be removed later. We will bring the update soon when our focused group start to work on the project. Please click the link to see detail.
+									Classical mechnics is the study of the motion of bodies (including the special case in which bodies remain at rest) in accordance with the general principles first enunciated by Sir Isaac Newton in his Philosophiae Naturalis Principia Mathematica (1687), commonly known as the Principia. Classical mechanics was the first branch of Physics to be discovered, and is the foundation upon which all other branches of Physics are built. Please click the link to see detail. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to classical mechanics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>
@@ -317,7 +317,8 @@
 									<h4>Nuclear Physics</h4>
 								</a>
 								<p>
-									This section is under construction. Some placeholder text are placed to be removed later. We will bring the update soon when our focused group start to work on the project. Please click the link to see detail.
+									The field of physics that studies atomic nuclei and their constituents and interactions is called Nuclear physics. This includes nuclear power, nuclear weapons, nuclear medicine and magnetic resonance imaging, industrial and agricultural isotopes, ion implantation in materials engineering, and radiocarbon dating in geology and archaeology. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to nuclear physics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+
 								</p>
 							</div>
 						</div>	
@@ -332,7 +333,7 @@
 									<h4> Solid State Physics</h4>
 								</a>
 								<p>
-									This section is under construction. Some placeholder text are placed to be removed later. We will bring the update soon when our focused group start to work on the project. Please click the link to see detail. 
+									The study of rigid matter, or solids, through methods such as quantum mechanics, crystallography, electromagnetism, and metallurgy is called solid state physics.  It is the largest branch of condensed matter physics. Solid-state physics studies how the large-scale properties of solid materials result from their atomic-scale properties. Thus, solid-state physics forms a theoretical basis of materials science. It also has direct applications, for example in the technology of transistors and semiconductors.  In this section we will discuss how to interpret and visualize different physical phenomena and equations related to solidstate  physics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details. 
 								</p>
 							</div>
 						</div>
@@ -343,7 +344,7 @@
 									<h4> Econophysics </h4>
 								</a>
 								<p>
-									This section is under construction. Some placeholder text are placed to be removed later. We will bring the update soon when our focused group start to work on the project. Please click the link to see detail. 
+									A heterodox interdisciplinary research field, applying theories and methods originally developed by physicists in order to solve problems in economics, usually those including uncertainty or stochastic processes and nonlinear dynamics is called econophysics. Some of its application to the study of financial markets has also been termed statistical finance referring to its roots in statistical physics. Econophysics is closely related to social physics.   In this section we will discuss how to interpret and visualize different physical phenomena and equations related to econophysics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details. 
 								</p>
 							</div>
 						</div>
@@ -354,7 +355,7 @@
 									<h4> Quantum Computing</h4>
 								</a>
 								<p>
-									This section is under construction. Some placeholder text are placed to be removed later. We will bring the update soon when our focused group start to work on the project. Please click the link to see detail. 
+									The use of quantum-mechanical phenomena such as superposition and entanglement to perform computation is called quantum computing. Please click the link to see detail. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to modern advancement in computation by using modern tools  Please click the link to see details. 
 								</p>
 							</div>
 						</div>	
