--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 									<h4> Mathematical Physics and Numerical Methods </h4>
 								</a>
 								<p>
-									This section is under construction. Some placeholder text are placed to be removed later. We will bring the update soon when our focused group start to work on the project. Please click the link to see detail.
+									The study of algorithms that use numerical approximation (as opposed to symbolic manipulations) for the problems of mathematical analysis (as distinguished from discrete mathematics) is called Numerical Analysis. The language of physics is called mathematical physical. It refers refers the development of mathematical methods for application to problems in physics. So in this section we will discuss how to interpret and visualize different physical phenomena and equations related to electrodynamics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>
