--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 									<h4> Statistical and Thermal Physics </h4>
 								</a>
 								<p>
-									  The use of statistical methods to understand the behavior of complex, many-particle systems; in particular, this machinery was originally developed to understand quantitatively the ideas of temperature, heat flow, and irreversibility is called Statistical and Thermal Physics. Statistical physics is one of the most amazing intellectual developments of the last hundred and fifty years.  It has its roots in classical thermodynamics, the study of "heat flow". Without statistical physics, semiconductor-based high technology would not exist, we wouldn't understand why outer space glows at 2.7 Kelvin, and Einstein would not have had a PhD thesis topic. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to our topic by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									  The use of statistical methods to understand the behavior of complex, many-particle systems; in particular, this machinery was originally developed to understand quantitatively the ideas of temperature, heat flow, and irreversibility is called Statistical and Thermal Physics. Statistical physics is one of the most amazing intellectual developments of the last hundred and fifty years. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to our topic by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
     
 								</p>
 							</div>
