--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 									<h4> Mathematical Physics and Numerical Methods </h4>
 								</a>
 								<p>
-									The study of algorithms that use numerical approximation (as opposed to symbolic manipulations) for the problems of mathematical analysis (as distinguished from discrete mathematics) is called Numerical Analysis. The language of physics is called mathematical physical. It refers refers the development of mathematical methods for application to problems in physics. So in this section we will discuss how to interpret and visualize different physical phenomena and equations related to electrodynamics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									The study of algorithms that use numerical approximation for the problems of mathematical analysis is called Numerical Analysis. A language of physics is called mathematical physical. It refers refers the development of mathematical methods for application to problems in physics. So in this section we will discuss how to interpret and visualize different physical phenomena and equations related to electrodynamics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>
@@ -295,7 +295,7 @@
 									<h4> Quantum Mechanics</h4>
 								</a>
 								<p>
-									The branch of physics which deals with the physical properties of nature on an atomic scale is called quantum mechnics. Quantum mechanics differs from classical physics in that energy, momentum, angular momentum, and other quantities of a bound system are restricted to discrete values (quantization), objects have characteristics of both particles and waves (wave-particle duality), and there are limits to how accurately the value of a physical quantity can be predicted prior to its measurement, given a complete set of initial conditions (the uncertainty principle). In this section we will discuss how to interpret and visualize different physical phenomena and equations related to qunatum mechanics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									The branch of physics which deals with the physical properties of nature on an atomic scale is called quantum mechnics. Quantum mechanics differs from classical physics in that energy, momentum, angular momentum, and other quantities of a bound system are restricted to discrete values, objects have characteristics of both particles and waves, and there are limits to how accurately the value of a physical quantity can be predicted prior to its measurement, given a complete set of initial conditions. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to qunatum mechanics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>
@@ -306,7 +306,7 @@
 									<h4> Classical Mechanics </h4>
 								</a>
 								<p>
-									Classical mechnics is the study of the motion of bodies (including the special case in which bodies remain at rest) in accordance with the general principles first enunciated by Sir Isaac Newton in his Philosophiae Naturalis Principia Mathematica (1687), commonly known as the Principia. Classical mechanics was the first branch of Physics to be discovered, and is the foundation upon which all other branches of Physics are built. Please click the link to see detail. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to classical mechanics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									Classical mechnics is the study of the motion of bodies (including the special case in which bodies remain at rest) in accordance with the general principles first enunciated by Sir Isaac Newton in his Philosophiae Naturalis Principia Mathematica (1687), commonly known as the Principia. Please click the link to see detail. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to classical mechanics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>
@@ -333,7 +333,7 @@
 									<h4> Solid State Physics</h4>
 								</a>
 								<p>
-									The study of rigid matter, or solids, through methods such as quantum mechanics, crystallography, electromagnetism, and metallurgy is called solid state physics.  It is the largest branch of condensed matter physics. Solid-state physics studies how the large-scale properties of solid materials result from their atomic-scale properties. Thus, solid-state physics forms a theoretical basis of materials science. It also has direct applications, for example in the technology of transistors and semiconductors.  In this section we will discuss how to interpret and visualize different physical phenomena and equations related to solidstate  physics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details. 
+									The study of rigid matter, or solids, through methods such as quantum mechanics, crystallography, electromagnetism, and metallurgy is called solid state physics.  It is the largest branch of condensed matter physics. Solid-state physics studies how the large-scale properties of solid materials result from their atomic-scale properties. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to solidstate  physics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details. 
 								</p>
 							</div>
 						</div>
@@ -344,7 +344,7 @@
 									<h4> Econophysics </h4>
 								</a>
 								<p>
-									A heterodox interdisciplinary research field, applying theories and methods originally developed by physicists in order to solve problems in economics, usually those including uncertainty or stochastic processes and nonlinear dynamics is called econophysics. Some of its application to the study of financial markets has also been termed statistical finance referring to its roots in statistical physics. Econophysics is closely related to social physics.   In this section we will discuss how to interpret and visualize different physical phenomena and equations related to econophysics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details. 
+									A heterodox interdisciplinary research field, applying theories and methods originally developed by physicists in order to solve problems in economics, usually those including uncertainty or stochastic processes and nonlinear dynamics is called econophysics. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to econophysics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details. 
 								</p>
 							</div>
 						</div>
