--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 									<h4> Mathematical Physics and Numerical Methods </h4>
 								</a>
 								<p>
-									The study of algorithms that use numerical approximation for the problems of mathematical analysis is called Numerical Analysis. A language of physics is called mathematical physical. It refers refers the development of mathematical methods for application to problems in physics. So in this section we will discuss how to interpret and visualize different physical phenomena and equations related to electrodynamics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									The study of algorithms that use numerical approximation for the problems of mathematical analysis is called Numerical Analysis. It refers refers the development of mathematical methods for application to problems in physics. So in this section we will discuss how to interpret and visualize different physical phenomena and equations related to numerical and mathematical methods by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>
@@ -279,7 +279,7 @@
 									<h4> Statistical and Thermal Physics </h4>
 								</a>
 								<p>
-									  The use of statistical methods to understand the behavior of complex, many-particle systems; in particular, this machinery was originally developed to understand quantitatively the ideas of temperature, heat flow, and irreversibility is called Statistical and Thermal Physics. Statistical physics is one of the most amazing intellectual developments of the last hundred and fifty years. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to our topic by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									  The use of statistical methods to understand the behavior of complex, many-particle systems; in particular, this machinery was originally developed to understand quantitatively the ideas of temperature, heat flow, and irreversibility is called Statistical and Thermal Physics. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to our topic by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
     
 								</p>
 							</div>
@@ -295,7 +295,7 @@
 									<h4> Quantum Mechanics</h4>
 								</a>
 								<p>
-									The branch of physics which deals with the physical properties of nature on an atomic scale is called quantum mechnics. Quantum mechanics differs from classical physics in that energy, momentum, angular momentum, and other quantities of a bound system are restricted to discrete values, objects have characteristics of both particles and waves, and there are limits to how accurately the value of a physical quantity can be predicted prior to its measurement, given a complete set of initial conditions. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to qunatum mechanics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									The branch of physics which deals with the physical properties of nature on an atomic scale is called quantum mechnics. Quantum mechanical objects have characteristics of both particles and waves, and there are limits to how accurately the value of a physical quantity can be predicted prior to its measurement, given a complete set of initial conditions. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to qunatum mechanics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>
@@ -306,7 +306,7 @@
 									<h4> Classical Mechanics </h4>
 								</a>
 								<p>
-									Classical mechnics is the study of the motion of bodies (including the special case in which bodies remain at rest) in accordance with the general principles first enunciated by Sir Isaac Newton in his Philosophiae Naturalis Principia Mathematica (1687), commonly known as the Principia. Please click the link to see detail. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to classical mechanics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									Classical mechnics is the study of the motion of bodies in accordance with the general principles first enunciated by Sir Isaac Newton in his Philosophiae Naturalis Principia Mathematica (1687), commonly known as the Principia. Please click the link to see detail. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to classical mechanics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>
