--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 									<h4> Solid State Physics</h4>
 								</a>
 								<p>
-									The study of rigid matter, or solids, through methods such as quantum mechanics, crystallography, electromagnetism, and metallurgy is called solid state physics.  It is the largest branch of condensed matter physics. Solid-state physics studies how the large-scale properties of solid materials result from their atomic-scale properties. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to solidstate  physics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details. 
+									The study of rigid matter, or solids, through methods such as quantum mechanics, crystallography, electromagnetism, and metallurgy is called solid state physics. Solid-state physics studies how the large-scale properties of solid materials result from their atomic-scale properties. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to solidstate  physics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details. 
 								</p>
 							</div>
 						</div>
