--- a/project/numerical-methods.html
+++ b/project/numerical-methods.html
@@ -213,7 +213,8 @@
                             <span class="timeline-icon"></span>
                             <span class="year">CHAPTER 7 </span>
                             <div class="timeline-content">
-                                <h3 class="title">Differential Equations
+                                <h3 class="title">Differential Equations</h3>
+                                <p class="description">
 
                              In this chapter we will discuss and visulize following topics:
                                     
