--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 									<h4> Quantum Computing</h4>
 								</a>
 								<p>
-									The use of quantum-mechanical phenomena such as superposition and entanglement to perform computation is called quantum computing. Please click the link to see detail. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to modern advancement in computation by using modern tools  Please click the link to see details. 
+									The use of quantum-mechanical phenomena such as superposition and entanglement to perform computation is called quantum computing. Please click the link to see detail. In this section we will discuss Quantum Computing with QisKit, and several data-visualization techniques of different physical phenomena and equations related to modern advancement in computation by using modern tools.  Please click the link to see details. 
 								</p>
 							</div>
 						</div>	
