--- a/project/classical-mechanics.html
+++ b/project/classical-mechanics.html
@@ -58,7 +58,7 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER I </span>
+                            <span class="year"> CHAPTER 1 </span>
                             <div class="timeline-content">
                                 <h3 class="title"> Motion in Central Field </h3>
                                 <p class="description">
@@ -81,7 +81,7 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER II </span>
+                            <span class="year"> CHAPTER 2 </span>
                             <div class="timeline-content">
                                 <h3 class="title text-left"> Elastic and Inelastic Collision </h3>
                                 <p class="description text-left">
@@ -104,7 +104,7 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER III </span>
+                            <span class="year"> CHAPTER 3 </span>
                             <div class="timeline-content">
                                 <h3 class="title"> Elementary Principles </h3>
                                 <p class="description">
@@ -126,7 +126,7 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER IV </span>
+                            <span class="year"> CHAPTER 4 </span>
                             <div class="timeline-content">
                                 <h3 class="title text-left"> Variational Principles and Lagrange’s Equations </h3>
                                 <p class="description text-left">
@@ -150,7 +150,7 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER V </span>
+                            <span class="year"> CHAPTER 5 </span>
                             <div class="timeline-content">
                                 <h3 class="title"> Inertial Frames </h3>
                                 <p class="description">
@@ -173,7 +173,7 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER VI </span>
+                            <span class="year"> CHAPTER 6 </span>
                             <div class="timeline-content">
                                 <h3 class="title text-left"> Motion of Rigid Bodies </h3>
                                 <p class="description text-left">
@@ -197,7 +197,7 @@
                         <!-- Add more blocks here -->
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER VII </span>
+                            <span class="year"> CHAPTER 7 </span>
                             <div class="timeline-content">
                                 <h3 class="title"> Relativity </h3>
                                 <p class="description">
