--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 									<h4> Electrodynamics </h4>
 								</a>
 								<p>
-									 The branch of physics which deals with rapidly changing electric and magnetic fields due to different interaction is called electrodynamics. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to electrodynamics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									 The branch of physics which deals with rapidly changing electric and magnetic fields with their dyanamics due to different interaction is called electrodynamics. In this section we will discuss how to interpret and visualize different physical phenomena, complex system and equations related to electrodynamics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 
     
 								</p>
@@ -317,7 +317,7 @@
 									<h4>Nuclear Physics</h4>
 								</a>
 								<p>
-									The field of physics that studies atomic nuclei and their constituents and interactions is called Nuclear physics. This includes nuclear power, nuclear weapons, nuclear medicine and magnetic resonance imaging, industrial and agricultural isotopes, ion implantation in materials engineering, and radiocarbon dating in geology and archaeology. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to nuclear physics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									The field of physics that studies atomic nuclei and their constituents and interactions is called Nuclear physics. This includes nuclear power, nuclear weapons, nuclear medicine and magnetic resonance imaging, industrial and agricultural isotopes, ion implantation in materials engineering, and radiocarbon dating in geology and archaeology. In this section we will discuss about how to interpret and visualize different physical phenomena and equations related to nuclear and particle physics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 
 								</p>
 							</div>
@@ -355,7 +355,7 @@
 									<h4> Quantum Computing</h4>
 								</a>
 								<p>
-									The use of quantum-mechanical phenomena such as superposition and entanglement to perform computation is called quantum computing. Please click the link to see detail. In this section we will discuss Quantum Computing with QisKit, and several data-visualization techniques of different physical phenomena and equations related to modern advancement in computation by using modern tools.  Please click the link to see details. 
+									The use of quantum-mechanical phenomena such as superposition and entanglement to perform computation is called quantum computing. Please click the link to see detail. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to modern advancement in computation by using modern tools  Please click the link to see details. 
 								</p>
 							</div>
 						</div>	
