--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 									<h4> Mathematical Physics and Numerical Methods </h4>
 								</a>
 								<p>
-									The study of algorithms that use numerical approximation for the problems of mathematical analysis is with development of methods for application is called Mathematical and Numerical Analysis.  So in this section we will discuss how to interpret and visualize different physical phenomena and equations related to numerical and mathematical methods by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									The study of algorithms that use numerical approximation for the problems of mathematical analysis with development of methods for application is called Mathematical and Numerical Analysis. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to numerical and mathematical methods by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>
@@ -332,7 +332,7 @@
 									<h4> Solid State Physics</h4>
 								</a>
 								<p>
-									The study of rigid matter, or solids, through methods such as quantum mechanics, crystallography, electromagnetism, metallurgy and large-scale properties of solid materials is called solid state physics. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to solid state physics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
+									The study of rigid matter, or solids, through methods such as quantum mechanics, crystallography, electromagnetism, metallurgy is called solid state physics. In this section we will discuss how to interpret and visualize different physical phenomena and equations related to solid state physics by using computational advanced tools based on undergraduate and graduate syllabus. Please click the link to see details.
 								</p>
 							</div>
 						</div>
